[tool.poetry]
name = "data-viz-tool"
version = "0.1.0"
description = ""
authors = ["Katsuya Shimabukuro <k.shimabukuro@corp.acall.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.1"
numpy = "^1.18.5"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
